force-app/main/default/objects/CTCT2__History__c/CTCT2__History__c.object-meta.xml
<CustomObject>
    <label>Constant Contact History</label>
    <nameField>
        <displayFormat>Hist-{00}</displayFormat>
        <label>History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Constant Contact History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>