force-app/main/default/objects/CTCT2__History__c/fields/CTCT2__Finish__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Finish__c</fullName>
    <label>Finish</label>
    <type>DateTime</type>
</CustomField>