force-app/main/default/objects/CTCT2__History__c/fields/CTCT2__Lead_Opt_Ins_From_CTCT__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Lead_Opt_Ins_From_CTCT__c</fullName>
    <label>Lead Opt Ins From Constant Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>