force-app/main/default/objects/CTCT2__History__c/fields/CTCT2__Opt_Outs_To_CTCT__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Opt_Outs_To_CTCT__c</fullName>
    <formula>CTCT2__Contact_Opt_Outs_To_CTCT__c  +  CTCT2__Lead_Opt_Outs_To_CTCT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opt Outs To Constant Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>