force-app/main/default/objects/CTCT2__History__c/fields/CTCT2__Settings__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settings</label>
    <referenceTo>CTCT2__Settings__c</referenceTo>
    <relationshipLabel>Constant Contact History</relationshipLabel>
    <relationshipName>Sync_History</relationshipName>
    <type>Lookup</type>
</CustomField>