force-app/main/default/objects/CTCT2__History__c/fields/CTCT2__Start__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>