force-app/main/default/objects/CTCT2__History__c/listViews/CTCT2__All_Histories.listView-meta.xml
<ListView>
    <fullName>CTCT2__All_Histories</fullName>
    <columns>NAME</columns>
    <columns>CTCT2__Start__c</columns>
    <columns>CTCT2__Finish__c</columns>
    <columns>CTCT2__Status__c</columns>
    <columns>CTCT2__Frequency__c</columns>
    <columns>CTCT2__Contact_Opt_Outs_From_CTCT__c</columns>
    <columns>CTCT2__Contact_Opt_Ins_From_CTCT__c</columns>
    <columns>CTCT2__Contact_Opt_Outs_To_CTCT__c</columns>
    <columns>CTCT2__Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Histories</label>
</ListView>